src/components/Nav/Nav.scss
.nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  position: fixed;
  background-color: white;
  padding: 10px 30px;
  &__logo {
    width: 90px;
    height: 35px;
  }
  &__container-menu {
    display: flex;
    align-items: center;
  }
  &__menu {
    display: flex;
    list-style-type: none;
    margin-right: 50px;
  }
  &__link {
    margin-left: 40px;
    font-size: 18px;
    font-weight: 100;
    letter-spacing: 3px;
    cursor: pointer;
    transition: all 0.2s;
    &:hover {
      font-weight: 700;
    }
  }

  &__btn {
    border: none;
    height: 32px;
    width: 120px;
    font-size: 22px;
    font-weight: 500;
    background-color: #facd02;
    transition: all 0.3s;
    margin-right: 10px;
    cursor: pointer;

    &:hover {
      transform: scale(1.05);
    }
    &--reponsive {
      display: none;
    }
    &:focus {
      outline: none;
    }
  }
  &__action {
    margin-right: 30px;
  }
}
// Reposive
@media (max-width: 992px) {
  .nav {
    flex-direction: column;
    align-items: flex-start;
    padding: 20px 30px;
    &__menu {
      flex-direction: column;
      margin: 0;
      padding: 0;
    }
    &__logo {
      margin-left: 20px;
    }
    &__link {
      margin-bottom: 20px;
      margin-top: 20px;
    }
    &__container-menu {
      flex-direction: column;
      align-items: flex-start;

      &--show {
        height: 0;
        overflow: hidden;
        transition: all 0.4s;
      }
      &--hidden {
        height: 370px;
        transition: all 0.4s;
      }
    }
    &__container-logo {
      display: flex;
      align-items: center;
      width: 100%;
    }
    .nav__btn--reponsive {
      display: block;
      margin-left: auto;
      margin-right: 30px;
      background-color: rgba($color: #000000, $alpha: 0);
    }
  }
}

